# backend_studentRegister

./: package-lock.json  package.json  pyproject.toml
student_registration/: db.sqlite3
student_registration/student_registration/: settings.py  urls.py
student_registration/students/: models.py  serializers.py  urls.py  views.py
student_registration/students/migrations/: 0001_initial.py
